<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ResetPasswordActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/c1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingStart="16sp"
        android:paddingEnd="16sp"
        app:layout_constraintBottom_toTopOf="@+id/c2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/label_email"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:labelFor="@id/input_email"
            android:text="@string/email_colon"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/input_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="0.35" />

        <EditText
            android:id="@+id/input_email"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:autofillHints="Email"
            android:gravity="center_vertical"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toEndOf="@id/label_email"
            app:layout_constraintWidth_percent="0.65" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/c2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:labelFor="@+id/input_email"
        android:paddingStart="16sp"
        android:paddingEnd="16sp"
        app:layout_constraintBottom_toTopOf="@+id/c3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/c1">

        <TextView
            android:id="@+id/label_temporary_password"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:labelFor="@id/input_verification_code"
            android:text="@string/temp_pass"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/input_verification_code"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.35" />

        <EditText
            android:id="@+id/input_verification_code"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:autofillHints="Email"
            android:gravity="center_vertical"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/label_temporary_password"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.65" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/c3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingStart="16sp"
        android:paddingEnd="16sp"
        app:layout_constraintBottom_toTopOf="@+id/c4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/c2">

        <TextView
            android:id="@+id/label_password"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:labelFor="@id/input_password"
            android:text="@string/password"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/input_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.35" />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:autofillHints="Email"
            android:gravity="center_vertical"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/label_password"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.65" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/c4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/c3">

        <Button
            android:id="@+id/button_set_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_password"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>