<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ForgotPasswordActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/c1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/c2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/c2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingStart="16sp"
        android:paddingEnd="16sp"
        app:layout_constraintBottom_toTopOf="@id/c3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/c1">

        <TextView
            android:id="@+id/forgot_password__text_error_message"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/please_input_your_email"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/c3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/c4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/c2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/c31"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingStart="16sp"
            android:paddingEnd="16sp"
            app:layout_constraintBottom_toTopOf="@+id/c32"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/label_email"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:labelFor="@id/input_email"
                android:text="@string/email_colon"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/input_email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.35" />

            <EditText
                android:id="@+id/input_email"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:autofillHints="Email"
                android:gravity="center_vertical"
                android:inputType="textEmailAddress"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintStart_toEndOf="@id/label_email"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.65" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/c32"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingStart="16sp"
            android:paddingEnd="16sp"
            app:layout_constraintBottom_toTopOf="@id/c33"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/c31">

            <TextView
                android:id="@+id/label_temporary_password"
                android:layout_width="0dp"
                android:layout_height="96dp"
                android:gravity="center_vertical"
                android:labelFor="@id/input_temporary_password"
                android:text="@string/temporary_password_colon"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/input_temporary_password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.35" />

            <EditText
                android:id="@+id/input_temporary_password"
                android:layout_width="0dp"
                android:layout_height="96dp"
                android:autofillHints="Temporary Password"
                android:gravity="center_vertical"
                android:inputType="textPassword"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintStart_toEndOf="@id/label_temporary_password"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.65" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/c33"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingStart="16sp"
            android:paddingEnd="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/c32">

            <TextView
                android:id="@+id/label_new_password"
                android:layout_width="0dp"
                android:layout_height="96dp"
                android:gravity="center_vertical"
                android:labelFor="@id/input_new_password"
                android:text="@string/new_password_colon"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/input_new_password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.35" />

            <EditText
                android:id="@+id/input_new_password"
                android:layout_width="0dp"
                android:layout_height="96dp"
                android:autofillHints="New Password"
                android:gravity="center_vertical"
                android:inputType="textPassword"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintStart_toEndOf="@id/label_new_password"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.65" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/c4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/c3">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="48sp"
            android:paddingEnd="48sp"
            android:text="@string/set_password"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>